fix display milli-second alignment

--- a/index.css
+++ b/index.css
@@ -111,8 +111,8 @@ label{
 .remaining{
     display: flex;
     justify-content: center;
-    margin: 0 16px;
-    padding: 10px 5px;
+    margin: 0 10px;
+    padding: 10px 2px;
     font-size: 5rem;
     align-items: center;
     background-color: #071625;
